--- a/app/assets/stylesheets/documents.css
+++ b/app/assets/stylesheets/documents.css
@@ -1,116 +1,3 @@
-.docs-panel-heading .accordion-toggle:after {
-    /* symbol for "opening" panels */
-    font-family: 'Glyphicons Halflings';  /* essential for enabling glyphicon */
-    content: "\e114";    /* adjust as needed, taken from bootstrap.css */
-    float: right;        /* adjust as needed */
-    color: #ffffff;         /* adjust as needed */
-}
-.docs-panel-heading .accordion-toggle.collapsed:after {
-    /* symbol for "collapsed" panels */
-    content: "\e080";    /* adjust as needed, taken from bootstrap.css */
-}
-
-.hiddenRow {
-    padding: 0 !important;
-}
-
-.docs-title td {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-.docs-navbar-tool {
-    display: none;
-}
-
-.docs-info-collapse {
-    padding: 15px 15px 15px 15px;
-}
-
-.doc-icon {
-    width: 1.25% !important;
-}
-
-.button_to,
-.button_to div {
-    display: inline;
-}
-
-.red {
-    color: red;
-}
-
-div.doc-info-list {
-    margin-right: 20px;
-    float: left;
-}
-
-div.doc-info-list-content {
-    margin-top: 0.4em;
-}
-
-input.form-control.doc-title-input {
-    width: 100%;
-}
-
-input.form-control.doc-tags-input {
-    width: 100%;
-}
-
-textarea.form-control.doc-desc-input {
-    width: 100%;
-}
-
-div.doc-info-buttons {
-    float: left;
-    clear: left;
-    margin-top: 1em;
-    margin-bottom: 1em;
-}
-
-div.select-document-panel {
-    height:500px;
-    outline: 0;
-}
-
-.parameter-group  {
-    /*background-color: red;*/
-    display: inline-block;
-    width: 100%;
-}
-.parameter-group table {
-    /*background-color: yellow;*/
-    display: inline-block;
-    margin-bottom: 20px;
-}
-
-.parameter-group table tr, .parameter-group table td {
-    width: 30%;
-    padding: 0 0 2% 0;
-}
-
-.types, .formats {
-    /*background-color: green;*/
-    width: 33%;
-    display: inline-block;
-    float: right;
-}
-
-.btn-upload {
-  margin-top: 6px;
-}
-
-.docs_download:hover {
-    cursor: pointer;
-}
-
 tr[data-id] {
     cursor: pointer;
 }
